src/tests/snapshots/gitu__tests__stash__stash_pop_default.snap
---
source: src/tests/stash.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Untracked files                                                                |
 file-two                                                                       |
                                                                                |
 Stashes                                                                        |
 stash@0 On main: file-one                                                      |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git stash pop -q 0                                                            |
Already up to date.                                                             |
styles_hash: 78ccba21d141d06d
